# HR-Recruiting-Assistant

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  runbook.md
recruitment_assistant/: __init__.py  logging_config.py
recruitment_assistant/agents/: __init__.py  crew.py
recruitment_assistant/api/: __init__.py  main.py  store.py
recruitment_assistant/ui/: api_client.py  app.py  components.py  report_utils.py
scripts/: cli.py  start-local-api.ps1  start-local-ui.ps1
tests/: conftest.py  test_agents.py  test_api.py  test_systems.py  test_ui_components.py
